--- a/src/day1/README
+++ b/src/day1/README
@@ -10,4 +10,4 @@ Example:
 - `a1b2c3d4e5f` --> 1 + 5 = 15
 - `treb7uchet` --> 7 + 7 = 77 (since there is only one digit, seven is both the first and last digit)
 
-Linky: [Advent of Code 2023 - Day 1](https://adventofcode.com/2023/day/1).
+Linky: https://adventofcode.com/2023/day/1.
