--- a/src/day1/README
+++ b/src/day1/README
@@ -1,13 +1,13 @@
-Advent of Code 2023 - Day 1
-===========================
-
-The calibration process involves concatenating the first and last digits on each line, 
-resulting in the calibration number.
-
-Example:
-- `1abc2` --> 1 + 2 = 12
-- `pqr3stu8vwx` --> 3 + 8 = 38
-- `a1b2c3d4e5f` --> 1 + 5 = 15
-- `treb7uchet` --> 7 + 7 = 77 (since there is only one digit, seven is both the first and last digit)
-
-Linky: https://adventofcode.com/2023/day/1.
+# == https://adventofcode.com/2023/day/1 ================== #
+# The first digit to appear and the last digit to appear    #
+# gets concatenated, the result of the concatenation is     #
+# the calibration number.                                   #
+# ========================================================= #
+# Example:                                                  #
+# 1abc2 -------> 1 + 2 = 12                                 #
+# pqr3stu8vwx -> 3 + 8 = 38                                 #
+# a1b2c3d4e5f -> 1 + 5 = 15                                 #
+# treb7uchet --> 7 + 7 = 77 | Since there is only one       #
+#                           | digit, seven is the           #
+#                           | first and last digit.         #
+# ========================================================= #
