--- a/src/day1/README
+++ b/src/day1/README
@@ -1,13 +1,30 @@
 # == https://adventofcode.com/2023/day/1 ================== #
 # The first digit to appear and the last digit to appear    #
-# gets concatenated, the result of the concatenation is     #
-# the calibration number.                                   #
+# gets concatenated, the sum of the all concatenated is the #
+# calibration number.                                       #
+# ========================================================= #
+# Part One                                                  #
 # ========================================================= #
 # Example:                                                  #
-# 1abc2 -------> 1 + 2 = 12                                 #
-# pqr3stu8vwx -> 3 + 8 = 38                                 #
-# a1b2c3d4e5f -> 1 + 5 = 15                                 #
-# treb7uchet --> 7 + 7 = 77 | Since there is only one       #
-#                           | digit, seven is the           #
-#                           | first and last digit.         #
+# 1abc2 --------> 1 + 2 = 12                                #
+# pqr3stu8vwx --> 3 + 8 = 38                                #
+# a1b2c3d4e5f --> 1 + 5 = 15                                #
+# treb7uchet ---> 7 + 7 = 77 | Since there is only one      #
+#                            | digit, seven is the          #
+#                            | first and last digit.        #
+# ========================================================= #
+# Part Two                                                  #
+# ========================================================= #
+# Little different for part two, same concept as part one   #
+# however, we must also take into account that the digits   #
+# can be in word form. i.e. one, two, seven, etc.           #
+#                                                           #
+# With that in mind, the website says that it only uses one #
+# through nine. No need to worry about digits > 9 nor < 1.  #
+#                                                           #
+# Example:                                                  #
+# two1nine -----> two + nine = 29                           #
+# eightwothree -> eight + two + three = 823                 #
+# abone2threex -> one + 2 + three = 123                     #
+# 7pqtsixteen --> 7 + six = 76                              #
 # ========================================================= #
